<resources>
    <string name="app_name">Radio-T</string>
    <string name="error_occurred">Error occurred.</string>
    <string name="retry">Retry</string>
    <string name="no_data">No data</string>
    <string name="error">Error</string>
    <string name="error_source">Audio source error</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="chat_log">Chat log</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="not_send">Do not send</string>
    <string name="show">Show</string>
    <string name="not_show">Do not show</string>
    <string name="web">Open in browser</string>
    <string name="quote">Quote</string>
    <string name="message_deleted">Message deleted</string>
    <string name="download_gitter"><a href="https://play.google.com/store/apps/details?id=im.gitter.gitter">Download Gitter client</a></string>
    <string name="listen">Listen</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="night_mode">Nigh mode</string>
    <string name="disabled">Disabled</string>
    <string name="night_mode_auto">Night mode auto</string>
    <string name="enabled">Enabled</string>
    <string name="podcasts">Podcasts</string>
    <string name="themes">Themes</string>
    <string name="themes_from_authors">Themes from authors</string>
    <string name="news">News</string>
    <string name="pirates">Pirates</string>
    <string name="about">About</string>
    <string name="credits">Credits</string>
    <string name="pirate_icon_credit"><div>Большое спасибо за иконку черепа <a href="http://www.freepik.com" title="Freepik">Freepik</a> с замечательного сайта <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>, лицензия <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div></string>
    <string name="comments">Comments</string>
    <string name="write_permission_rationale">Write permission needed for download</string>
    <string name="cancel">Cancel</string>
    <string name="formatted_time" translatable="false">%1$02d:%2$02d:%3$02d</string>
    <string name="crash_reports">Crash reports</string>
    <string name="reports">Reports</string>
    <string name="notifications">Notifications</string>
    <string name="live_show_notification">Notify about stream</string>
    <string name="authorization">Authorization</string>
    <string name="online">Stream</string>
    <string name="all">All</string>
    <string name="downloaded">Downloaded</string>
    <string name="enter_message">Введите сообщение</string>
</resources>
