<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_podcats"
            android:title="@string/podcasts"
            android:icon="@drawable/ic_radio_24dp"/>



        <item
            android:id="@+id/nav_stream"
            android:icon="@drawable/ic_cast_24dp"
            android:title="@string/stream" />

        <item
            android:id="@+id/nav_pirates"
            android:title="@string/pirates"
            android:icon="@drawable/ic_radio_24dp"/>


        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_rss_feed_24dp"
            android:title="@string/news" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/chat" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings"/>



    </group>

</menu>
